      points, *not* pixels.  This change was made for Matlab
      compatibility.  Compared to previous versions of Octave, some
      lines and markers will appear 4/3 larger.

    * The appearance of patterned lines (LineStyle = ":"|"--"|"-.") has
      been improved for small widths (LineWidth < 1.5 pixels) which is a
      common scenario.

 ** New functions added in Octave 6:

      lightangle
      verLessThan

 ** Deprecated functions.

    The following functions have been deprecated in Octave 6 and will
    be removed from Octave 8 (or whatever version is the second major
    release after 6):

      Function               | Replacement
      -----------------------|------------------
      output_max_field_width | output_precision

 ** The following functions were deprecated in Octave 4.4 and have been
    removed from Octave 6.

      Function             | Replacement
      ---------------------|------------------
      chop                 | sprintf for visual results
      desktop              | isguirunning
      tmpnam               | tempname
      toascii              | double
      java2mat             | __java2mat__

 ** Deprecated graphics properties.

    The following properties or allowed corresponding values have been
    deprecated in Octave 6 and will be removed from Octave 8 (or
    whatever version is the second major release after 6):

      Object               | Property                | Value
      ---------------------|-------------------------|-------------------


 ** The following properties or allowed corresponding values were
    deprecated in Octave 4.4 and have been removed from Octave 6:

      Object               | Property                | Value
      ---------------------|-------------------------|-------------------
      figure               | doublebuffer            |
                           | mincolormap             |
                           | wvisual                 |