@@ -17,6 +17,12 @@ Summary of important user-visible changes for version 6 (yyyy-mm-dd):
       been improved for small widths (LineWidth < 1.5 pixels) which is a
       common scenario.
 
+ ** Printing to EPS files now uses a tight bounding box ("-tight"
+    argument to print) by default.  This makes more sense for EPS
+    files which are normally embedded within other documents, and is
+    Matlab compatible.  If necessary use the "-loose" option to
+    reproduce figures as they appeared in previous versions of Octave.
+
  ** New functions added in Octave 6:
 
       lightangle
